Java version change